--- a/api/package.json
+++ b/api/package.json
@@ -31,10 +31,12 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "connect-redis": "^6.0.0",
     "express-session": "^1.17.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -45,11 +47,13 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.0.0",
     "@types/passport-local": "^1.0.34",
+    "@types/redis": "^2.8.32",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
